@@ -61,6 +61,9 @@ Library
 - Issue #15014: SMTP.auth() and SMTP.login() now support RFC 4954's optional
   initial-response argument to the SMTP AUTH command.
 
+- Issue #6549: Remove hyphen from ttk.Style().element options.  Only return result
+  from ttk.Style().configure if a result was generated or a query submitted.
+
 
 What's New in Python 3.5.0 beta 3?
 ==================================
